istio/mutate-test/mute.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: istio-sidecar-injector
webhooks:
  - admissionReviewVersions:
      - v1beta1
      - v1
    clientConfig:
      caBundle: ''
      service:
        name: istiod
        namespace: istio-system
        path: /inject
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    name: sidecar-injector.istio.io
    namespaceSelector:
      matchLabels:
        istio-injection: enabled
    reinvocationPolicy: Never
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
        scope: '*'
    sideEffects: None
    timeoutSeconds: 29
#  - admissionReviewVersions:
#      - v1beta1
#      - v1
#    clientConfig:
#      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lSQUlkRkUvejNVbDczUThERHowRlpqMjh3RFFZSktvWklodmNOQVFFTEJRQXcKR0RFV01CUUdBMVVFQ2hNTlkyeDFjM1JsY2k1c2IyTmhiREFlRncweU1UQXhNVEV3T1RVNU5ETmFGdzB6TVRBeApNRGt3T1RVNU5ETmFNQmd4RmpBVUJnTlZCQW9URFdOc2RYTjBaWEl1Ykc5allXd3dnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRQ3M0YjNOVisrZW1IK1gybWtWRlBka3IwTTdxTjFYZ3Nua2lFTWkKSzJadUU1bk9NZXpBaUllbWU3enZvQnBmZ1BxcVdEWXdmWXp0ODlsUi9ocEprQnZnV3NkWVdkdTB5cjlSbEpGMApudHcvbitLVzB [...]
#      service:
#        name: istiod
#        namespace: istio-system
#        path: /inject
#        port: 443
#    failurePolicy: Fail
#    matchPolicy: Exact
#    name: sidecar-injector.istio.com
#    namespaceSelector: {}
#    objectSelector:
#      matchLabels:
#        istio-injection: enabled
#    reinvocationPolicy: Never
#    rules:
#      - apiGroups:
#          - ""
#        apiVersions:
#          - v1
#        operations:
#          - CREATE
#          - UPDATE
#        resources:
#          - pods
#        scope: '*'
#    sideEffects: None
#    timeoutSeconds: 30
